// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildHermesComposeContent > adds the hermes-webui service when web UI is enabled 1`] = `
"services:
  hermes:
    image: nousresearch/hermes-agent@sha256:e07bc53f12aeda54c766b3dde031a33bc21c14479b93542d984e66b9a8e2009b
    container_name: hermes
    restart: unless-stopped
    command: gateway run
    ports:
      - 8642:8642
    volumes:
      - /root/.hermes:/opt/data
    environment:
      - API_SERVER_ENABLED=true
      - API_SERVER_HOST=0.0.0.0
  hermes-webui:
    image: ghcr.io/nesquena/hermes-webui@sha256:cd9269a5e59ce400e8917c854b92a60cd1f34a71a1ca2858f31c168917d2a6e5
    container_name: hermes-webui
    restart: unless-stopped
    ports:
      - 127.0.0.1:8787:8787
    volumes:
      - /root/.hermes:/home/hermeswebui/.hermes
      - /root/workspace:/workspace
    environment:
      - HERMES_WEBUI_HOST=0.0.0.0
      - HERMES_WEBUI_PORT=8787
      - HERMES_WEBUI_PASSWORD=generated-password
      - HERMES_WEBUI_STATE_DIR=/home/hermeswebui/.hermes/webui
      - HERMES_WEBUI_DEFAULT_WORKSPACE=/workspace
      - WANTED_UID=10000
      - WANTED_GID=10000
      - HERMES_WEBUI_TRUST_FORWARDED_HOST=1
      - HERMES_WEBUI_TRUST_FORWARDED_PROTO=1
"
`;

exports[`buildHermesComposeContent > renders a compose with all options including api key and telegram token 1`] = `
"services:
  hermes:
    image: nousresearch/hermes-agent@sha256:e07bc53f12aeda54c766b3dde031a33bc21c14479b93542d984e66b9a8e2009b
    container_name: hermes
    restart: unless-stopped
    command: gateway run
    ports:
      - 8642:8642
    volumes:
      - /root/.hermes:/opt/data
    environment:
      - API_SERVER_ENABLED=true
      - API_SERVER_HOST=0.0.0.0
      - API_SERVER_KEY=test-api-key
      - TELEGRAM_BOT_TOKEN=123456:abc-def
      - API_SERVER_MODEL_NAME=gpt-4o
      - HERMES_INFERENCE_PROVIDER=custom
      - BASE_URL=https://api.example.com
"
`;

exports[`buildHermesComposeContent > renders a compose with provider env vars only 1`] = `
"services:
  hermes:
    image: nousresearch/hermes-agent@sha256:e07bc53f12aeda54c766b3dde031a33bc21c14479b93542d984e66b9a8e2009b
    container_name: hermes
    restart: unless-stopped
    command: gateway run
    ports:
      - 8642:8642
    volumes:
      - /root/.hermes:/opt/data
    environment:
      - API_SERVER_ENABLED=true
      - API_SERVER_HOST=0.0.0.0
      - HERMES_INFERENCE_PROVIDER=openai
      - OPENAI_API_KEY=sk-test
"
`;

exports[`buildHermesComposeContent > renders a minimal compose with no optional inputs 1`] = `
"services:
  hermes:
    image: nousresearch/hermes-agent@sha256:e07bc53f12aeda54c766b3dde031a33bc21c14479b93542d984e66b9a8e2009b
    container_name: hermes
    restart: unless-stopped
    command: gateway run
    ports:
      - 8642:8642
    volumes:
      - /root/.hermes:/opt/data
    environment:
      - API_SERVER_ENABLED=true
      - API_SERVER_HOST=0.0.0.0
"
`;
